@@ -1,22 +1,16 @@
 package game;
 
 import java.util.Iterator;
-import java.sql.Time;
 import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Map.Entry;
 import java.util.Set;
-import java.util.TreeMap;
 import java.util.TreeSet;
+//import java.util.logging.Logger;
 import java.util.stream.Collectors;
-
 import attackdefencehills.AttackDefenceHills;
-//import attackdefensehills.AttackDefenseHills;
 import combat.CombatSimulation;
 import defaultpackage.Configuration;
 import exploration.ExplorationAndMovement;
@@ -35,7 +29,7 @@ import vision.Vision;
  */
 public class Game {
 
-
+	//private static Logger LOGGER = Logger.getLogger( Game.class.getName() );
 
 	/**
 	 * Numero di righe della mappa del gioco.
@@ -46,7 +40,6 @@ public class Game {
 	 * Numero di colonne della mappa del gioco.
 	 */
 	private static int cols;
-
 
 	/**
 	 * Raggio di visione delle formiche al quadrato.
@@ -59,17 +52,15 @@ public class Game {
 	private static int attackRadius2;
 
 	/**
-	 * Raggio di visione delle formiche per la raccolta del cibo al quadrato. 
+	 * Raggio di visione delle formiche per la raccolta del cibo al quadrato.
 	 */
 	private static int spawnRadius2;
 
 	/**
-	 * TODO vd 405 416
-	 * {@link Offsets} 
+	 * TODO vd 405 416 {@link Offsets}
 	 * 
 	 */
 	private static Vision view;
-
 
 	/**
 	 * Insieme contenente le {@link Tile tile} su cui sono posizionati i
@@ -84,14 +75,14 @@ public class Game {
 	private static Set<Tile> enemyHills;
 
 	/**
-	 * Insieme contentente le {@link Tile tile} su cui sono posizionate
-	 * le formiche dell'agente nel turno corrente.
+	 * Insieme contentente le {@link Tile tile} su cui sono posizionate le formiche
+	 * dell'agente nel turno corrente.
 	 */
 	private static Set<Tile> myAnts;
 
 	/**
-	 * Insieme contentente le {@link Tile tile} su cui sono posizionate
-	 * le formiche nemiche viste dalle {@link #myAnts formiche dell'agente} nel turno corrente.
+	 * Insieme contentente le {@link Tile tile} su cui sono posizionate le formiche
+	 * nemiche viste dalle {@link #myAnts formiche dell'agente} nel turno corrente.
 	 */
 	private static Set<Tile> enemyAnts;
 
@@ -101,12 +92,14 @@ public class Game {
 	private static Set<Tile> orderlyAnts;
 
 	/**
-	 * Insieme contentente le {@link Tile tile} su cui e' posizionato il cibo nel turno corrente.
+	 * Insieme contentente le {@link Tile tile} su cui e' posizionato il cibo nel
+	 * turno corrente.
 	 */
 	private static Set<Tile> food;
 
 	/**
-	 * Insieme di {@link Orders ordini} assegnati ad una o piu' {@link #myAnts formiche} dell'agente.
+	 * Insieme di {@link Orders ordini} assegnati ad una o piu' {@link #myAnts
+	 * formiche} dell'agente.
 	 */
 	private static Set<Order> orders;
 
@@ -128,7 +121,7 @@ public class Game {
 	/**
 	 * Tile che sono al di fuori della vista delle formiche.
 	 */
-	//private static Set<Tile> outOfSight;
+	// private static Set<Tile> outOfSight;
 
 	/**
 	 * Mappa del gioco.
@@ -140,16 +133,16 @@ public class Game {
 	/**
 	 * 
 	 */
-	//private static Set<Tile> borders;
+	// private static Set<Tile> borders;
 
 	/**
 	 * Returns all orders sent so far.
 	 * 
 	 * @return all orders sent so far
 	 */
-	private Set<Order> getOrders() {
+	/*private Set<Order> getOrders() {
 		return orders;
-	}
+	}*/
 
 	public static Set<Tile> getOrdersTarget() {
 		return ordersTarget;
@@ -172,7 +165,6 @@ public class Game {
 	 */
 	public Game(int rows, int cols, int viewRadius2, int attackRadius2, int spawnRadius2) {
 
-
 		setRows(rows);
 		setCols(cols);
 
@@ -191,8 +183,9 @@ public class Game {
 		ordersTarget = new TreeSet<Tile>();
 		unexplored = new TreeSet<Tile>();
 		water = new HashSet<Tile>();
-		//outOfSight = new TreeSet<Tile>(Tile.visionComparator());//TODO check if comparator
-		//borders = new TreeSet<Tile>();
+		// outOfSight = new TreeSet<Tile>(Tile.visionComparator());//TODO check if
+		// comparator
+		// borders = new TreeSet<Tile>();
 		setTiles = new TreeSet<Tile>();
 		map = initGameMap();
 
@@ -216,14 +209,19 @@ public class Game {
 
 		for (int r = 0; r < rows; r++) {
 			ArrayList<Tile> tempRow = new ArrayList<>();
-			for (int c = 0; c < cols; c++) 
-				tempRow.add(new Tile(r, c));
-			//if(r == 0 || r == rows-1 || c == 0 || c == cols-1)
-			//borders.add(t);
+			for (int c = 0; c < cols; c++) {
+				Tile t = new Tile(r,c);
+				t.setSuitable(true);
+				tempRow.add(t);
+			}
+			// if(r == 0 || r == rows-1 || c == 0 || c == cols-1)
+			// borders.add(t);
 			output.add(tempRow);
-			//setTiles.addAll(tempRow.parallelStream().collect(Collectors.toCollection(()->new TreeSet<Tile>(Tile.tileComparator()))));
+			// setTiles.addAll(tempRow.parallelStream().collect(Collectors.toCollection(()->new
+			// TreeSet<Tile>(Tile.tileComparator()))));
 			setTiles.addAll(tempRow);
-			//unexplored.addAll(tempRow.parallelStream().collect( Collectors.toCollection(() -> new TreeSet<Tile>(Tile.visionComparator()))));
+			// unexplored.addAll(tempRow.parallelStream().collect(
+			// Collectors.toCollection(() -> new TreeSet<Tile>(Tile.visionComparator()))));
 			unexplored.addAll(tempRow);
 		}
 
@@ -282,7 +280,6 @@ public class Game {
 				UP_prev_Tile = UP_cur_Tile;
 			}
 
-
 			DOWN_prev_Tile.addNeighbour(Directions.EAST, firstColTile);
 			firstColTile.addNeighbour(Directions.WEST, DOWN_prev_Tile);
 
@@ -300,31 +297,28 @@ public class Game {
 			UP_cur_Tile.addNeighbour(Directions.NORTH, DOWN_cur_Tile);
 		}
 
-
 		/*
-		// ADD "EXTERNAL" NEIGHBOUR
-		// Iterator<Tile> firstRowIt = output.getFirst().iterator();
-		// Iterator<Tile> lastRowIt = output.getLast().iterator();
-		Iterator<Tile> firstRowIt = output.get(0).iterator();
-		Iterator<Tile> lastRowIt = output.get(rows-1).iterator();
-
-		while (firstRowIt.hasNext() && lastRowIt.hasNext()) {
-			Tile DOWN = lastRowIt.next();
-			Tile UP = firstRowIt.next();
-
-			UP.addNeighbour(Directions.NORTH, DOWN);
-			DOWN.addNeighbour(Directions.SOUTH, UP);
-		}
-
+		 * // ADD "EXTERNAL" NEIGHBOUR // Iterator<Tile> firstRowIt =
+		 * output.getFirst().iterator(); // Iterator<Tile> lastRowIt =
+		 * output.getLast().iterator(); Iterator<Tile> firstRowIt =
+		 * output.get(0).iterator(); Iterator<Tile> lastRowIt =
+		 * output.get(rows-1).iterator();
+		 * 
+		 * while (firstRowIt.hasNext() && lastRowIt.hasNext()) { Tile DOWN =
+		 * lastRowIt.next(); Tile UP = firstRowIt.next();
+		 * 
+		 * UP.addNeighbour(Directions.NORTH, DOWN); DOWN.addNeighbour(Directions.SOUTH,
+		 * UP); }
+		 * 
 		 */
 
-
-		//setTiles.forEach(s -> System.out.println(s+" -> "+s.getNeighbour()));
-		//output.forEach(l -> l.forEach(s -> System.out.println(s+" -> "+s.getNeighbour())));
+		// setTiles.forEach(s -> System.out.println(s+" -> "+s.getNeighbour()));
+		// output.forEach(l -> l.forEach(s -> System.out.println(s+" ->
+		// "+s.getNeighbour())));
 		return output;
 	}
 
-	public static List<List<Tile>> getMap(){
+	public static List<List<Tile>> getMap() {
 		return map;
 	}
 
@@ -360,11 +354,11 @@ public class Game {
 		return unexplored;
 	}
 
-	/*public static Set<Tile> getBorders(){
-		return borders;
-	}*/
+	/*
+	 * public static Set<Tile> getBorders(){ return borders; }
+	 */
 
-	public static Set<Tile> getFoodTiles(){
+	public static Set<Tile> getFoodTiles() {
 		return food;
 	}
 
@@ -385,13 +379,12 @@ public class Game {
 	}
 
 	public static Set<Tile> getOutOfSight() {
-		return view.getOutOfSight(); 
+		return view.getOutOfSight();
 	}
 
 	public static int getNumberEnemy() {
 		return numberEnemy;
 	}
-
 
 	public void clear() {
 		clearMyAnts();
@@ -399,7 +392,7 @@ public class Game {
 		clearMyHills();
 		clearEnemyHills();
 		clearFood();
-		view.clearAllVision();//TODO
+		view.clearAllVision();// TODO
 		orders.clear();
 		ordersTarget.clear();
 	}
@@ -408,8 +401,10 @@ public class Game {
 	 * Clears game state information about my ants locations.
 	 */
 	private void clearMyAnts() {
-		myAnts.parallelStream().forEachOrdered(ant -> ant.removeAnt());
+		myAnts.parallelStream().forEachOrdered(tile -> tile.removeAnt());
 		myAnts.clear();
+		orderlyAnts.parallelStream().forEachOrdered(tile -> tile.removeAnt());
+		orderlyAnts.clear();
 	}
 
 	/**
@@ -454,7 +449,7 @@ public class Game {
 	 */
 
 	public static void setVisible(Tile tile, boolean visible) {
-		if(visible)
+		if (visible)
 			unexplored.remove(tile);
 		tile.setVisible(visible);
 	}
@@ -472,15 +467,12 @@ public class Game {
 
 		curTile.placeAnt(owner);
 
-
-
-
 		if (owner == 0) {
 			myAnts.add(curTile);
 			// setVision(curTile); richiamato da Bot.afterUpdate() con setVision()
 		} else {
 			enemyAnts.add(curTile);
-			if(owner > numberEnemy)
+			if (owner > numberEnemy)
 				Game.numberEnemy = owner;
 		}
 
@@ -520,13 +512,10 @@ public class Game {
 		else
 			enemyHills.add(curTile);
 
-		if(owner > numberEnemy)
+		if (owner > numberEnemy)
 			Game.numberEnemy = owner;
 
-
 	}
-
-
 
 	/**
 	 * Returns location with the specified offset from the specified location.
@@ -557,8 +546,29 @@ public class Game {
 	 * @return
 	 */
 	public static Set<Tile> getTiles(Tile tile, Offsets offsets) {
-		return offsets.parallelStream().map(offset -> getTile(tile, offset)).filter(t -> t.isAccessible()).collect(Collectors.toCollection(HashSet<Tile>::new));
+		return offsets.parallelStream().map(offset -> getTile(tile, offset)).filter(t -> t.isAccessible())
+				.collect(Collectors.toCollection(HashSet<Tile>::new));
 	}
+
+	private void setHillsToDefend() {
+		if (Timing.getTurnNumber() == 1) {
+			// aggiungere hill da difendere
+			getMyHills().parallelStream().forEachOrdered(hill -> view.addHillToDefend(hill));
+		} else {
+			// rimuovi hills distrutti
+			Set<Tile> hillsDown = new TreeSet<Tile>(view.getHillsToDefend());
+			Set<Tile> myHillsTemp = new TreeSet<Tile>(getMyHills());
+			if (hillsDown.size() > myHillsTemp.size()) {
+				hillsDown.removeAll(myHillsTemp);
+				hillsDown.parallelStream().forEachOrdered(hill -> view.removeHillToDefend(hill));
+			} else if (hillsDown.size() < getMyHills().size()) {
+				myHillsTemp.removeAll(hillsDown);
+				myHillsTemp.parallelStream().forEachOrdered(hill -> view.addHillToDefend(hill));
+			}
+		}
+	}
+
+
 
 	/**
 	 * EQUALS TO STATIC SEARCH Calculates visible information
@@ -567,21 +577,8 @@ public class Game {
 
 		view.setVision(myAnts);
 
-		if(Timing.getTurnNumber()==1) {
-			//aggiungere hill da difendere
-			getMyHills().parallelStream().forEachOrdered(hill -> view.addHillToDefend(hill));
-		} else {
-			//rimuovi hills distrutti
-			Set<Tile> hillsDown = new TreeSet<Tile>(view.getHillsToDefend());
-			Set<Tile> myHillsTemp = new TreeSet<Tile>(getMyHills());
-			if(hillsDown.size() > myHillsTemp.size()) {
-				hillsDown.removeAll(myHillsTemp);
-				hillsDown.parallelStream().forEachOrdered(hill -> view.removeHillToDefend(hill));
-			} else if(hillsDown.size() < getMyHills().size()) {
-				myHillsTemp.removeAll(hillsDown);
-				myHillsTemp.parallelStream().forEachOrdered(hill -> view.addHillToDefend(hill));
-			}
-		}
+		setHillsToDefend();
+
 	}
 
 	/**
@@ -590,26 +587,36 @@ public class Game {
 	 * @param myAnt     map tile with my ant
 	 * @param direction direction in which to move my ant
 	 */
-	static public void issueOrder(Order order) {
+	static public boolean issueOrder(Order order) {
 		Tile o_ant = order.getOrigin();
 		Directions o_dir = order.getDirection();
 
-		Tile dest = o_ant.getNeighbour().get(o_dir);
+		//LOGGER.info(order.toStringExtended());
 
-		if(!ordersTarget.contains(dest)) {
+		Tile dest = o_ant.getNeighbourTile(o_dir); //Maybe null if staystill
+
+		if ( !ordersTarget.contains(dest)) {
 			ordersTarget.add(dest);
+			dest.setSuitable(false); //destinazione formica turno successivo
 			myAnts.remove(o_ant);
 			orderlyAnts.add(o_ant);
-
 			orders.add(order);
-			if (!order.getDirection().equals(Directions.STAYSTILL))
+			if(!order.getDirection().equals(Directions.STAYSTILL))
 				System.out.println(order);
-		}
+			return true;
+		} 
+		return false;
+	}
+
+	public void resetTargetSuitable() {
+
+		ordersTarget.parallelStream().forEachOrdered(targetTile -> targetTile.setSuitable(true));
 	}
 
 	/**
-	 * Per ogni @link Order ordine} assegnato alle formiche
-	 * viene mandato l'ordine al System Output tramite {@link #issueOrder(Order)}.
+	 * Per ogni @link Order ordine} assegnato alle formiche viene mandato l'ordine
+	 * al System Output tramite {@link #issueOrder(Order)}.
+	 * 
 	 * @param orders insieme di ordini da eseguire
 	 */
 	static public void issueOrders(Set<Order> orders) {
@@ -638,14 +645,14 @@ public class Game {
 
 		int difRow = t1.getRow() - t2.getRow();
 		int difCol = t1.getCol() - t2.getCol();
-		int deltaRow = (difRow<0) ? Math.abs(difRow)-rows : difRow;
-		int deltaCol = (difCol<0) ? Math.abs(difCol)-cols : difCol;
+		int deltaRow = (difRow < 0) ? Math.abs(difRow) - rows : difRow;
+		int deltaCol = (difCol < 0) ? Math.abs(difCol) - cols : difCol;
 
-		if(deltaRow>0 && deltaCol<=deltaRow && (-deltaCol> deltaRow || deltaCol > -deltaRow))
+		if (deltaRow > 0 && deltaCol <= deltaRow && (-deltaCol > deltaRow || deltaCol > -deltaRow))
 			output = Directions.NORTH;
-		else if(deltaRow<0 && deltaCol<=-deltaRow && (-deltaCol> deltaRow || deltaCol > -deltaRow))
+		else if (deltaRow < 0 && deltaCol <= -deltaRow && (-deltaCol > deltaRow || deltaCol > -deltaRow))
 			output = Directions.SOUTH;
-		else if(deltaCol>0)
+		else if (deltaCol > 0)
 			output = Directions.EAST;
 		else
 			output = Directions.WEST;
@@ -657,143 +664,141 @@ public class Game {
 	}
 
 	public static Set<Tile> getMapTiles() {
-		return setTiles;	
+		return setTiles;
 	}
 
-	public static Map<Node, Tile> getEnemyToAnt() {
+	//public static Map<Node, Tile> getEnemyToAnt() {
+	public static Set<Node> getEnemyToAnt() {
 		return view.getEnemyToAnt();
 	}
 
 	/**
-	 * Considero le situazioni di battaglia in corso
-	 * se ce ne e' almeno una in corso
+	 * Considero le situazioni di battaglia in corso se ce ne e' almeno una in corso
 	 * combatti
 	 * 
 	 */
 	public void doCombat() {
+		//LOGGER.severe("\tdoCombat");
+		Map<Tile, Tile> ongoingBattlesSituation = getOngoingBattlesSituation();
+		//LOGGER.severe("\t\t****OngoingBattles number:" + ongoingBattlesSituation.size() + "\nOngoing Battles: " + ongoingBattlesSituation);
 		
-		Map<Tile,Tile> ongoingBattlesSituation = getOngoingBattlesSituation();
-
-		//System.out.println("battlesLeading: "+ongoingBattles);
-
-		if(ongoingBattlesSituation.size()!=0) {
-		/*	try {
-				if(ongoingBattlesSituation.size()>2)
-					throw new NullPointerException();*/
-				fight(ongoingBattlesSituation);
-		/*	}catch(NullPointerException e) {
-				throw new NullPointerException("I'm in! - > " + ongoingBattlesSituation);
-			}*/
-			
-		}
+		if (ongoingBattlesSituation.size() != 0) 
+			fight(ongoingBattlesSituation);
+		//LOGGER.severe("\t~doCombat");
 	}
 
 	/**
-	 * itero su tutti i nemici che sono in visione di una mia formica,
-	 * prendo una coppia nemico-formica per volta
-	 * se la mia formica non e' gia' coinvolta in un'altra battaglia,
-	 * inserisco la battaglia corrente tra quelle in corso
+	 * itero su tutti i nemici che sono in visione di una mia formica, prendo una
+	 * coppia nemico-formica per volta se la mia formica non e' gia' coinvolta in
+	 * un'altra battaglia, inserisco la battaglia corrente tra quelle in corso
+	 * 
 	 * @return
 	 */
-	private Map<Tile,Tile> getOngoingBattlesSituation(){
-		
-		Map<Node,Tile> enemyToAnt = getEnemyToAnt();
-		Iterator<Entry<Node, Tile>> inCombatSituationItr = enemyToAnt.entrySet().iterator();
-		
-		Set<Tile> myAntsInCombatSituation = new TreeSet<Tile>();
-		Map<Tile,Tile> ongoingBattles = new TreeMap<Tile,Tile>();
-		
-		while(inCombatSituationItr.hasNext()) {
-			Entry<Node, Tile> currPairOfOpponents = inCombatSituationItr.next();
-			Tile enemyAnt = currPairOfOpponents.getKey().getTile();
-			Tile myAnt = currPairOfOpponents.getValue();
+	private Map<Tile, Tile> getOngoingBattlesSituation() {
+		int targetDistance = Configuration.getCombatModuleSearchRadius();
+		Iterator<Node> inCombatSituationItr = getEnemyToAnt().iterator();
+		Map<Tile, Tile> ongoingBattles = new HashMap<Tile, Tile>();
+		Set<Tile> antsInvolved = new HashSet<Tile>();
+		Set<Tile> enemyInvolved = new HashSet<Tile>();
 
-			//if(enemyTileAsNode.getHeuristicValue()) FIXME magari diminuire e non utilizzare il raggio di visione, utilizzando la distanza
-			if(!myAntsInCombatSituation.add(myAnt)) {
-				Iterator<Tile> setEnemyIt = ongoingBattles.keySet().iterator();
-				boolean notAddThisAnt = false;
-				while(!notAddThisAnt && setEnemyIt.hasNext()) {
-					Tile eA = setEnemyIt.next();	
-					if(Game.getDistance(myAnt,eA) < Configuration.getCombatModuleSearchRadius())
-						notAddThisAnt = true;
+
+		if(inCombatSituationItr.hasNext()) {
+			Node curEnemyToAnt = inCombatSituationItr.next();
+			Tile curEnemy = curEnemyToAnt.getTile();
+			Tile curAnt = curEnemyToAnt.getTarget();
+			ongoingBattles.put(curAnt, curEnemy);
+			antsInvolved.add(curAnt);
+			enemyInvolved.add(curEnemy);
+
+			while(inCombatSituationItr.hasNext()) {
+				curEnemyToAnt = inCombatSituationItr.next();
+				final Tile enemy = curEnemyToAnt.getTile();
+				final Tile ant = curEnemyToAnt.getTarget();
+				if(!antsInvolved.contains(ant)) {
+					if(!enemyInvolved.contains(enemy)) {
+						if(antsInvolved.stream().allMatch(nextAnts -> (
+								Game.getDistance(ant, nextAnts)>targetDistance) && Game.getDistance(enemy, nextAnts)>targetDistance)
+								&& enemyInvolved.parallelStream().allMatch(nextEnemy -> 
+								Game.getDistance(enemy, nextEnemy)>targetDistance &&  Game.getDistance(ant, nextEnemy)>targetDistance)) {
+
+							ongoingBattles.put(ant, enemy);
+
+						}
+						enemyInvolved.add(enemy);
+					}
+					antsInvolved.add(ant);
 				}
-				if(notAddThisAnt)
-					ongoingBattles.put(myAnt, enemyAnt);
-			}
-
+			}	
 		}
-		
-		
-		
-		//myAntsInCombatSituation.parallelStream().forEachOrdered(ant -> Game.myAnts.remove(ant));
-		
-		/*try {
-			if(ongoingBattles.size()>0)
-				throw new NullPointerException();*/
-			return ongoingBattles;
-		/*}catch(NullPointerException e) {
-			throw new NullPointerException("I'm in! - > " + ongoingBattles + "\nEnemyToAnt - >" +enemyToAnt);
-		}*/
-		
+		return ongoingBattles;
 	}
-	
+
 	/**
-	 * Per ogni situazione di battaglia, assegno un tempo massimo per la sua esecuzione
-	 * ed avvio una simulazione di battaglia;
-	 * Per ogni battaglia
+	 * Per ogni situazione di battaglia, assegno un tempo massimo per la sua
+	 * esecuzione ed avvio una simulazione di battaglia; Per ogni battaglia
+	 * 
 	 * @param ongoingBattlesSituation
 	 */
-	private void fight(Map<Tile,Tile> ongoingBattlesSituation) {
+	private void fight(Map<Tile, Tile> ongoingBattlesSituation) {
+		//LOGGER.severe("\tfight()");
+		
 		Set<CombatSimulation> battles = new HashSet<CombatSimulation>();
-		long timeAssigned = Timing.getCombatTimeStime()/ongoingBattlesSituation.size();
-		
-		ongoingBattlesSituation.entrySet().parallelStream().forEachOrdered(e ->
-			battles.add(new CombatSimulation(e.getKey(), e.getValue(), timeAssigned)));
+		long timeAssigned = Timing.getCombatTimeStime() / ongoingBattlesSituation.size();
 		
 		
-		battles.parallelStream().forEachOrdered(battle -> battle.combatResolution());
-		try {
-			if(battles.size()>1)
-				throw new NullPointerException();
-			
-		}catch(NullPointerException e) {
-			throw new NullPointerException("I'm in! - > " + battles +"\n\t" + getEnemyToAnt());
-		}
+		ongoingBattlesSituation.entrySet().parallelStream()
+		.forEachOrdered(e -> battles.add(new CombatSimulation(e.getKey(), e.getValue(), timeAssigned)));
+		
 		Set<Order> movesToPerform = new HashSet<Order>();
+		
+		battles.parallelStream().forEachOrdered(battle -> {
+			battle.combatResolution();
+			/*LOGGER.severe("\n\n\t\t\t\t_______*_*_*_*_*BATTLE*_*_*_*_*_______");
+			LOGGER.severe("\n\n\t\t\t\t"+ battle +"\n\n");*/
+			movesToPerform.addAll(battle.getMoves());
+			/*LOGGER.severe("\n\n\t\t\t\t_______*_*_*_*_*SINGLE MOVES:*_*_*_*_*_______");
+			LOGGER.severe("\n\n\t\t\t\t"+ battle.getMoves() +"\n\n");
+			LOGGER.severe("\n\n\t\t\t\t_______*_*_*_*_*ALL MOVES:*_*_*_*_*_______");
+			LOGGER.severe("\n\n\t\t\t\t"+ movesToPerform +"\n\n");*/
+		});
+		
+		/*Set<Order> movesToPerform = new HashSet<Order>();
 		battles.parallelStream().forEachOrdered(battle -> movesToPerform.addAll(battle.getMoves()));
+		*/
+		//LOGGER.severe("\t\t_______*_*_*_*_*COMBAT ORDER*_*_*_*_*_______");
+		//LOGGER.severe("\t\t"+movesToPerform);
+		//LOGGER.severe("\t\t___________________");
 		Game.issueOrders(movesToPerform);
+		
+		//LOGGER.severe("\t~fight");
 	}
 	
+
 	public void doFood() {
-		if(getMyAnts().size()>0)
-			new FoodCollection(getFoodTiles(),getMyAnts());
+		if (getMyAnts().size() > 0)
+			new FoodCollection(getFoodTiles(), getMyAnts());
 
 	}
 
-	public void doDefence() {
-		new AttackDefenceHills();
-	}
 	public void doAttackHills() {
-		new AttackDefenceHills().attack();
-	}
-	public void doDefenceHills() {
-		new AttackDefenceHills().defence();
+		AttackDefenceHills.attack();
 	}
 
+	public void doDefenceHills() {
+		AttackDefenceHills.defence();
+	}
 
 	public void doExploration() {
 		new ExplorationAndMovement();
 
 	}
 
-
-
 	public static void printMap() {
 		Iterator<List<Tile>> rowIt = map.iterator();
-		while(rowIt.hasNext()) {
+		while (rowIt.hasNext()) {
 			Iterator<Tile> colIt = rowIt.next().iterator();
-			while(colIt.hasNext()) {
-				System.out.print(!colIt.next().isAccessible()? 'x': 'o');
+			while (colIt.hasNext()) {
+				System.out.print(!colIt.next().isAccessible() ? 'x' : 'o');
 			}
 			System.out.print('\n');
 		}
@@ -801,9 +806,9 @@ public class Game {
 
 	public static void printMapVision() {
 		Iterator<List<Tile>> rowIt = map.iterator();
-		while(rowIt.hasNext()) {
+		while (rowIt.hasNext()) {
 			Iterator<Tile> colIt = rowIt.next().iterator();
-			while(colIt.hasNext()) {
+			while (colIt.hasNext()) {
 				System.out.print(colIt.next().getVisible());
 			}
 			System.out.print('\n');
@@ -812,15 +817,13 @@ public class Game {
 
 	public static void printNeighbour() {
 		Iterator<List<Tile>> rowIt = map.iterator();
-		while(rowIt.hasNext()) {
+		while (rowIt.hasNext()) {
 			Iterator<Tile> colIt = rowIt.next().iterator();
-			while(colIt.hasNext()) {
+			while (colIt.hasNext()) {
 				Tile tile = colIt.next();
-				System.out.println(tile + " ->  " +tile.getNeighbour());
+				System.out.println(tile + " ->  " + tile.getNeighbours());
 			}
 
 		}
 	}
-
-
 }
